# alltz

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  HOMEBREW_TAP_SETUP.md  INSTALL.md  LICENSE  PLAN.md  README.md  RELEASE.md  RELEASE_NOTES_v0.1.2.md  create-github-release.sh  debug_test.rs  example-config.toml  release-local.sh  release-with-sha.sh  release.sh  test-local-formula.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
homebrew-tap/: README.md
homebrew-tap/Formula/: alltz.rb
locales/: en.json  en.yml
src/: app.rs  cities.json  config.rs  main.rs  time.rs  weather.rs
src/ui/: mod.rs  timeline.rs
