[package]
name = "alltz"
version = "0.1.0"
edition = "2021"
authors = ["Claude Code <noreply@anthropic.com>"]
description = "Terminal-based time zone viewer for developers and remote teams"
license = "MIT"

[dependencies]
ratatui = { version = "0.29.0", default-features = true }
crossterm = "0.29.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
