[package]
name = "alltz"
version = "0.1.3"
edition = "2021"
authors = ["Alan Bradburne <alan@xenocode.co.jp>", "Claude Code <noreply@anthropic.com>"]
description = "Terminal-based time zone viewer"
license = "MIT"

[dependencies]
ratatui = { version = "0.29.0", default-features = true }
crossterm = "0.29.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.2"
dirs = "6.0.0"
clap = { version = "4.0", features = ["derive"] }
sunrise = "1.0"
